WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124796
REGRESSION (
r156291
): TileController tiles don't always repaint when they resize
https://bugs.webkit.org/show_bug.cgi?id=124796
Summary
REGRESSION (r156291): TileController tiles don't always repaint when they resize
Tim Horton
Reported
2013-11-22 15:26:24 PST
http://trac.webkit.org/changeset/156291
dropped the setNeedsDisplay that was previously moved under platformCALayerDidCreateTiles without moving it back into TileController. This means that when tiles resize, we don't repaint. <
rdar://problem/15537608
>
Attachments
patch
(2.94 KB, patch)
2013-11-22 15:29 PST
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-11-22 15:29:48 PST
Created
attachment 217722
[details]
patch I'm going to try to make a test now.
Simon Fraser (smfr)
Comment 2
2013-11-22 16:41:24 PST
Comment on
attachment 217722
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=217722&action=review
> Source/WebCore/ChangeLog:8 > + Reviewed by NOBODY (OOPS!). > + > + * platform/graphics/ca/mac/TileController.mm:
High level summary please. Why did
r156291
break it?
Tim Horton
Comment 3
2013-11-24 00:32:15 PST
http://trac.webkit.org/changeset/159732
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug